# detector

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  dockerfile  main.py  pyproject.toml
logging_config/: stdout.json
models/saved-models/: crowd_threshold.json  lstm_combined.pth  lstm_fights.pth  lstm_fights_scaler.pkl  lying_threshold.json
src/anonymization/: action_detector.py  anonymizer.py  config.py  main.py  why-so-serious.ipynb  why-so-serious.py
src/detector/: action.py  action_recorder.py  anonymizer.py  clip_manager.py  clip_saver.py  clip_uploader.py  config.py  demp.py  detector.py  enums.py  fps_normalizer.py  lstm.py  main.py  recorder.py  scene_features.py  scene_lstm.py  sequencer.py  skeleton_drawer.py  sources.py  timestamper.py  vectors.py
src/detector/scene/: __init__.py  analyzer.py  config.py  detectors.py  geometry.py
src/detector/utils/: mylogger.py
src/tools/: dataset_manager.py  fps_estimator.py  scene_annotator.py  script.py  train.py
tools/: train.py  train2.py  yolo_pose_manager.py
vectors/: example.csv
