[project]
name = "detector"
version = "0.1.0"
description = "Activities detector using video sources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fiftyone>=1.13.0",
    "labelimg>=1.8.6",
    "lap>=0.5.12",
    "opencv-python>=4.13.0.92",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.4.12",
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }
torchaudio = { index = "pytorch-gpu" }
