[project]
name = "detector"
version = "0.1.0"
description = "Activities detector using video sources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lap>=0.5.13",
    "numpy>=2.4.2",
    "opencv-python-headless>=4.10.0.84",
    "opencv-stubs>=0.1.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.4.12",
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }

[dependency-groups]
dev = []
